fix overflow

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,3 +1,7 @@
 p {
   text-indent: 25px;
 }
+
+.wrapper {
+ overflow: auto;
+}
